# DeepSkyDiscovery

./: CMakeLists.txt  README.md  configure
cmake/: add_python_module.cmake  config.cmake  find_tool.cmake
cmake/tools/: cpl.cmake
examples/: correlate_images.py  load_image.py
include/deepskydiscovery/: bivector.hpp  core.hpp  error.hpp  image.hpp  mask.hpp  vector.hpp
include/deepskydiscovery/detail/: error.hpp
python/deepskydiscovery/: __init__.py  convert.py  visual.py
src/deepskydiscovery/: core.cpp
src/pybindings/: bivector.cpp  core.cpp  error.cpp  image.cpp  mask.cpp  module.cpp  vector.cpp
